Fix x-overflow on phone screens & Remove redundant CSS
Fixes x-overflow on phone screens, where it was possible to scroll horizontally.
Remove the service-config class where the class declaration was missing and instead apply the used CSS directly on config-sheet.vue.

--- a/bundles/org.openhab.ui/web/src/css/app.styl
+++ b/bundles/org.openhab.ui/web/src/css/app.styl
@@ -188,6 +188,7 @@ html
 
 .block-narrow
   z-index auto
+  overflow-x hidden !important
 
 @media (min-width 1024px)
     .block-narrow
